# mdreader

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  PKGBUILD  README.md  mdreader.desktop  test.md  test_search.md
.github/workflows/: release.yml
docs/plans/: 2025-02-11-markdown-viewer.md  2026-02-13-ui-refinement-design.md  2026-02-13-ui-refinement-plan.md
docs/superpowers/plans/: 2026-03-19-mdx-support.md
docs/superpowers/specs/: 2026-03-19-mdx-support-design.md
src/: app.rs  args.rs  config.rs  file.rs  lib.rs  links.rs  main.rs  markdown.rs  render.rs  search.rs  theme.rs
tests/: markdown_test.rs
