[package]
name = "mdreader"
version = "0.1.1"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_commonmark = "0.22"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "13.0"
syntect = "5.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
notify = "6.1"
rfd = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[lib]
name = "mdreader"
path = "src/lib.rs"

[[bin]]
name = "mdreader"
path = "src/main.rs"