[package]
name = "mdreader"
version = "0.2.1"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_commonmark = { version = "0.22", features = ["better_syntax_highlighting"] }
pulldown-cmark = "0.13"
syntect = "5.2"
notify = "6.1"
rfd = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"

[lib]
name = "mdreader"
path = "src/lib.rs"

[[bin]]
name = "mdreader"
path = "src/main.rs"